--- a/Policies Privacy.htm
+++ b/Policies Privacy.htm
@@ -39,7 +39,7 @@
                 
 <ul><li>ارائه، نگهداری و بهبود کیفیت خدمات</li>
 <li>ارائه برنامه‌های جدید با توجه به نیاز کاربر</li>
-<li>پیگیری سریع‌تر و کمتر شدن مشکلات در استفاده از مایکت</li><li>ارائه ویژگی‌های جدید و مورد نیاز کاربران</li></ul>
+<li>پیگیری سریع‌تر و کمتر شدن مشکلات در استفاده از برنامه</li><li>ارائه ویژگی‌های جدید و مورد نیاز کاربران</li></ul>
                 
     </article>
   </section>
