--- a/Policies Privacy.htm
+++ b/Policies Privacy.htm
@@ -50,7 +50,7 @@
   <footer dir="ltr" lang="en">
     
    	Smart Rabbit
-    Copywrite &copy; 2022
+    CopyRight &copy; 2022
   </footer>
 </body>
 </html>
